--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ li{
 }
 
 .ul-alternate li{
-    border-bottom: 2px solid #d8d8d8;
+    list-style-type: none;
     padding-left: 0px;
 }
 
@@ -216,32 +216,26 @@ textarea{
 
 .table{
     width: 100%;
-    margin:0 0 2em 0;
+    margin: 0 0 2em 0;
     border-collapse: collapse;
     text-align: left;
 }
-
 .table td{
-    padding: 75em;
+    padding: .75em;
 }
-
 .table th{
     background: #ccc;
     padding: .75em;
 }
-
 .table tbody tr td{
     border-bottom: 1px solid #ccc;
 }
-
 .table tbody tr:first-child td{
     border-top: 2px solid #666;
 }
-
 .table tbody tr:last-child td{
-    border-bottom:  2px solid #666;
+    border-bottom: 2px solid #666;
 }
-
 
 .table tbody tr:nth-child(even) td{
     background: #eee;
@@ -310,6 +304,10 @@ textarea{
     overflow: hidden;
 }
 
+.gallery-img img {
+    width: 100%;
+}
+
 .gallery-thumb img, .gallery-img img{
     margin-bottom: 2%;
     display: inline-block;
@@ -328,12 +326,23 @@ textarea{
 
 .main-footer a{
     color: rgba(255,255, 255, 0.4);
+    text-decoration: none;
+
+
+}
+
+.main-footer a:hover{
+    color: #49bf9d;
 }
 
 .main-footer .ul-icons a {
     font-size: .75em;
     border-bottom: none;
 }
+
+.copyright{
+    list-style: none;
+} 
 
 .copyrigth li{
     display: inline-block;
@@ -348,7 +357,7 @@ textarea{
 }
 
 .copyrigth li:last-child{
-    border-left: 0px;
+    padding-right: 0px;
 }
 
 /* grid */
@@ -361,30 +370,27 @@ textarea{
     width: 48.5%;
     float: left;
 }
-
 .col-2:first-child{
     margin-right: 1.5%;
 }
-
 .col-2:last-child{
     margin-left: 1.5%;
 }
-
 .col-2-3{
     width: 66%;
     float: left;
 }
-
 .col-1-3{
     width: 32%;
     float: left;
 }
-
-.col-1-3:nth-child(3n-2){
-    
-    margin-right: 2%;
+.col-1-3:nth-child(3n - 2){ /* 1, 4, 7*/
+   margin-right: 2%;
+}
+.col-1-3:nth-child(3n){ /* 3, 6, 9*/
+   margin-left: 2%;
 }
 
-.col-1-3:nth-child(3n){
+.col-2-3 + .col-1-3, .col-1-3 + .col-2-3{
     margin-left: 2%;
 }
